--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
     jcenter()
     maven { url "https://jitpack.io" }
 }
@@ -64,14 +65,14 @@ configurations {
 dependencies {
     //compile files('../PokeGOAPI-Java/library/build/libs/PokeGOAPI-library-all-0.3.0.jar')
 
-    compile files('lib/api-1.1.1.jar')
+    compile files('lib/api-1.1.2.jar')
 
     // TODO: Wait for jitpack to fix itself...
     //compile 'com.github.Grover-c13:PokeGOAPI-Java:Development-SNAPSHOT'
 
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'io.reactivex:rxkotlin:0.60.0'
-    compile 'svarzee.gps:gpsoauth:0.3'
+    compile 'svarzee.gps:gpsoauth:0.3.1'
     compile 'com.squareup.moshi:moshi:1.2.0'
     compile 'net.jpountz.lz4:lz4:1.3.0'
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-3'
